Add Karate BDD integration testing